--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -25,9 +25,9 @@
 			import mx.events.FlexEvent;
 			import mx.events.ResourceEvent;
 			
+			import net.vdombox.ide.common.events.ResourceVOEvent;
 			import net.vdombox.ide.common.model._vo.ResourceVO;
 			import net.vdombox.ide.modules.wysiwyg.events.ObjectsTreePanelEvent;
-			import net.vdombox.ide.modules.wysiwyg.events.ResourceVOEvent;
 			
 			import spark.components.Button;
 
