--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ProjectsSettingsDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ProjectsSettingsDialog.mxml
@@ -161,10 +161,11 @@
 			 width="100%" height="100%"
 			 paddingLeft="10" paddingRight="10">
 
-		<mx:Panel height="100%" layout="absolute" title="Projects:"
+		<mx:Panel height="100%" layout="absolute" title="Projects"
 				  verticalScrollPolicy="off" horizontalScrollPolicy="off"
 				  backgroundAlpha="0"
-				  borderAlpha="0">
+				  borderAlpha="0"
+				  fontFamily="Tahoma">
 		
 			<mx:VBox height="100%">
 				
@@ -193,13 +194,15 @@
 		
 		<mx:Panel width="100%" height="100%" layout="absolute"
 				  verticalScrollPolicy="off" horizontalScrollPolicy="off"
-				  title="Project properties:"
-				  fontWeight="bold"
+				  title="Project properties"
 				  backgroundAlpha="0"
-				  borderAlpha="0">
+				  borderAlpha="0"
+				  fontFamily="Tahoma">
+			
 			<mx:ViewStack	id="vsProperties" 
 							width="100%" height="100%"/>
 		</mx:Panel>
+		
 	</mx:HBox>
 	
 	<mx:Spacer height="10"/>
