control bar buttons
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8015 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/PowerPackControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/PowerPackControlBar.mxml
@@ -2,7 +2,7 @@
 <mx:ControlBar xmlns:mx="http://www.adobe.com/2006/mxml" 
 			   horizontalGap="7" verticalAlign="middle" 
 			   height="35"
-			   creationComplete="creationCompleteHandler(event)" xmlns:control="net.vdombox.powerpack.lib.player.control.*">
+			   creationComplete="creationCompleteHandler(event)" xmlns:control="net.vdombox.powerpack.lib.player.control.*" xmlns:control1="net.vdombox.powerpack.control.*">
 	<mx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
@@ -127,7 +127,7 @@
 				 selectedIndex="{ContextManager.templates.getItemAt( 0 ).selectedProjectIndex}"
 				 change="cbApplicationsChangeHandler(event)"/>
 	
-	<control:ControlBarImage id="menuAppSettings" 
+	<control1:ControlBarButton id="menuAppSettings" 
 							 sourceEnabled="@Embed('/assets/icons/settingsEnabled.png')" 
 							 sourceDisabled="@Embed('/assets/icons/settingsDisabled.png')"
 							 toolTip="Template properties"
@@ -135,19 +135,19 @@
 	
 	<mx:VRule height="20"/>
 	
-	<control:ControlBarImage id="menuBtnRun"
+	<control1:ControlBarButton id="menuBtnRun"
 							 sourceEnabled="@Embed('/assets/icons/runEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/runDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_RUN)"
 							 toolTip="Run ({ctrlString}{separator}R)"/>
 	
-	<control:ControlBarImage id="menuBtnDebug"
+	<control1:ControlBarButton id="menuBtnDebug"
 							 sourceEnabled="@Embed('/assets/icons/debugEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/debugDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_DEBUG)" 
 							 toolTip="Debug ({ctrlString}{separator}D)"/>
 	
-	<control:ControlBarImage id="menuBtnStepByStep"
+	<control1:ControlBarButton id="menuBtnStepByStep"
 							 sourceEnabled="@Embed('/assets/icons/stepByStepEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/stepByStepDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_BY_STEP)" 
@@ -155,31 +155,31 @@
 
 	<mx:VRule height="20"/>
 	
-	<control:ControlBarImage id="menuBtnResume"
+	<control1:ControlBarButton id="menuBtnResume"
 							 sourceEnabled="@Embed('/assets/icons/ResumeEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/ResumeDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_RESUME)" 
 							 toolTip="Resume ({ctrlString}{separator}M)"/>
 	
-	<control:ControlBarImage id="menuBtnStepInto"
+	<control1:ControlBarButton id="menuBtnStepInto"
 							 sourceEnabled="@Embed('/assets/icons/StepIntoEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/StepIntoDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_INTO)" 
 							 toolTip="Step Into ({ctrlString}{separator}I)"/>
 	
-	<control:ControlBarImage id="menuBtnStepOver"
+	<control1:ControlBarButton id="menuBtnStepOver"
 							 sourceEnabled="@Embed('/assets/icons/StepOverEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/StepOverDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_OVER)" 
 							 toolTip="Step Over ({ctrlString}{separator}O)"/>
 
-	<control:ControlBarImage id="menuBtnStepReturn"
+	<control1:ControlBarButton id="menuBtnStepReturn"
 							 sourceEnabled="@Embed('/assets/icons/StepReturnEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/StepReturnDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_STEP_RETURN)" 
 							 toolTip="Step Return ({ctrlString}{separator}E)"/>
 	
-	<control:ControlBarImage id="menuBtnBreak"
+	<control1:ControlBarButton id="menuBtnBreak"
 							 sourceEnabled="@Embed('/assets/icons/BreakEnabled.png')"
 							 sourceDisabled="@Embed('/assets/icons/BreakDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_BREAK)" 
@@ -187,7 +187,7 @@
 	
 	<mx:VRule height="20"/>
 	
-	<control:ControlBarImage id="menuBuild"
+	<control1:ControlBarButton id="menuBuild"
 							 sourceEnabled="@Embed('/assets/icons/exportBuildEnabled.png')" 
 							 sourceDisabled="@Embed('/assets/icons/exportBuildDisabled.png')"
 							 click="menuItem_clickHandler(event, ITEM_TYPE_BUILD_INSTALLER)" 
