git-svn-id: http://svn.vdombox.ru/flextools/trunk@8022 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/TabsPanel.mxml
@@ -79,6 +79,40 @@
 				tabs_changeHandler();
 			}
 			
+			public function RemoveAction( action : Object ) : Object
+			{
+				if ( !_tabs )
+					return null;
+				
+				var tabsItem : Object;
+				
+				if ( action is ServerActionVO )
+					tabsItem = findServerAction( action as ServerActionVO );
+				else
+					tabsItem = findGlobalActionOrLibrary( action );
+				
+				if ( tabsItem )
+				{
+					if ( tabs.selectedItem == tabsItem )
+					{
+						if ( tabs.selectedIndex != 0 )
+						{
+							tabs.selectedIndex = 0;
+							tabs_changeHandler();
+						}
+						else if ( tabs.dataProvider.length > 1 )
+						{
+							tabs.selectedIndex = 1;
+							tabs_changeHandler();
+						}
+					}
+					_tabs.removeItemAt( _tabs.getItemIndex( tabsItem ) );
+					return tabsItem;
+				}
+				
+				return null;
+			}
+			
 			public function deleteActionByObjectVO( objectVO : IVDOMObjectVO ) : void
 			{
 				/*if ( objectVO is ObjectVO )
