--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -18,8 +18,6 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 			import net.vdombox.ide.modules.events.events.WorkAreaEvent;
 			
 			import spark.events.IndexChangeEvent;
@@ -27,9 +25,15 @@
 			protected function scroller_creationCompleteHandler( event : FlexEvent ) : void
 			{
 				// TODO Auto-generated method stub
-				scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
-				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
 				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+				
+				scroller.horizontalScrollBar.height = 12;
+				
+				scroller.horizontalScrollBar.thumb.height = 12;
+				scroller.verticalScrollBar.thumb.width = 12;
+				
+				scroller.horizontalScrollBar.track.height = 12;
+				scroller.verticalScrollBar.track.width = 12;
 			}
 			
 			protected function showElementsView_creationCompleteHandler( event : FlexEvent ) : void
