--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaHScrollBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaHScrollBarSkin.mxml
@@ -24,7 +24,7 @@ HScrollBarThumbSkin and HScrollBarTrackSkin classes, respectively.
       @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minWidth="35" minHeight="12" width="100%"
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minWidth="35" width="100%" height="8"
     alpha.normal="1" alpha.disabled="0.2" alpha.inactive="0.2">
 
     <fx:Metadata>
@@ -75,11 +75,11 @@ HScrollBarThumbSkin and HScrollBarTrackSkin classes, respectively.
         <s:State name="inactive" />
     </s:states>
 
-    <s:Button id="track" left="0" right="0" width="100%" 
+    <s:Button id="track" left="0" right="0" width="100%"  height="8"
 			  focusEnabled="false"
               skinClass="net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarTrackSkin" />
 
-    <s:Button id="thumb"
+    <s:Button id="thumb" height="8"
               focusEnabled="false" visible.inactive="false" cornerRadius="5"
               skinClass="net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarTrumbSkin"/>
 
