--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaHScrollBarTrackSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaHScrollBarTrackSkin.mxml
@@ -51,7 +51,7 @@
     </s:states>
 
 	<!-- border/fill -->
-	<s:Rect top="0" bottom="0" left="0" right="0" minWidth="30" minHeight="12">
+	<s:Rect top="0" bottom="0" left="0" right="0" minWidth="30" height="100%">
 		<s:fill>
 			<s:BitmapFill source = "@Embed('assets/vdomscrollbar/horizontal-bg.png')" smooth="true" fillMode="repeat" />
 		</s:fill>
