--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaHScrollBarTrumbSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaHScrollBarTrumbSkin.mxml
@@ -31,7 +31,7 @@
     </s:states>
 
 	<!-- background -->
-	<s:HGroup width="100%" gap="0" horizontalAlign="center" alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
+	<!--<s:HGroup width="100%" gap="0" horizontalAlign="center" alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
 		<s:Rect left="1" minWidth="8" maxWidth="8" minHeight="12">
 			<s:fill>
 				<s:BitmapFill source = "@Embed('assets/vdomscrollbar/horizontal-scroll-left.png')" smooth="true"/>
@@ -48,5 +48,15 @@
 				<s:BitmapFill source = "@Embed('assets/vdomscrollbar/horizontal-scroll-right.png')" smooth="true"/>
 			</s:fill>
 		</s:Rect>
-	</s:HGroup>
+	</s:HGroup> -->
+	
+	<s:Rect left="1" radiusX="{height / 2}" radiusY="{height / 2}" width="100%" height="100%"
+			alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
+		<s:fill>
+			<s:LinearGradient rotation="90">
+				<s:GradientEntry color="#707070" />
+				<s:GradientEntry color="#909090" />
+			</s:LinearGradient>
+		</s:fill>
+	</s:Rect>
 </s:SparkSkin>
