--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaVScrollBarThumbSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaVScrollBarThumbSkin.mxml
@@ -21,7 +21,8 @@
       @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009">
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
+	width="100%" height="100%">
 
     <fx:Metadata>
     <![CDATA[ 
@@ -51,7 +52,7 @@
     </s:states>
 
     <!-- background -->
-	<s:VGroup height="100%" gap="0" verticalAlign="middle" alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
+	<!--<s:VGroup height="100%" gap="0" verticalAlign="middle" alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
 		<s:Rect left="0" top="1" right="0" minWidth="12" minHeight="8" maxHeight="8">
 			<s:fill>
 				<s:BitmapFill source = "@Embed('assets/vdomscrollbar/vertical-scroll-top.png')" smooth="true"/>
@@ -67,6 +68,17 @@
 				<s:BitmapFill source = "@Embed('assets/vdomscrollbar/vertical-scroll-bottom.png')" smooth="true"/>
 			</s:fill>
 		</s:Rect>
-	</s:VGroup>
+	</s:VGroup> -->
+	
+	
+	<s:Rect top="1" width="100%" height="100%" radiusX="{width / 2}" radiusY="{ width / 2 }"
+			alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
+		<s:fill>
+			<s:LinearGradient>
+				<s:GradientEntry color="#707070" />
+				<s:GradientEntry color="#909090" />
+			</s:LinearGradient>
+		</s:fill>
+	</s:Rect>
 	
 </s:SparkSkin>
