--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/LevelsFilterPanel.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/LevelsFilterPanel.mxml
@@ -12,7 +12,6 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			import net.vdombox.ide.modules.tree.events.LevelsFilterPanelEvent;
 			import net.vdombox.ide.modules.tree.model.vo.TreeElementVO;
 			import net.vdombox.ide.modules.tree.model.vo.TreeLevelVO;
@@ -91,12 +90,6 @@
 				structureLevelsList.addEventListener( Event.CHANGE, changeHandler, true, 0, true );
 			}
 			
-			protected function structureLevelsList_creationCompleteHandler(event:FlexEvent):void
-			{
-				// TODO Auto-generated method stub
-				structureLevelsList.scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
-			}
-			
 		]]>
 	</fx:Script>
 	
@@ -148,7 +141,7 @@
 	<s:List id="structureLevelsList"
 			dataProvider="{ levels }" height="100%" width="100%" y="25" change="changeHandler( event )"
 			borderVisible="false" itemRenderer="{ new ClassFactory( StructureLevelItemRenderer ) }" selectedItem="@{ _currentStructuretLevel }"
-			creationComplete="structureLevelsList_creationCompleteHandler(event)" contentBackgroundAlpha="0" />
+			contentBackgroundAlpha="0" />
 
 	
 </s:Panel>
