--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
@@ -20,8 +20,6 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 			import net.vdombox.ide.modules.tree.events.WorkAreaEvent;
 
 			private var isExpanded : Boolean;
@@ -80,9 +78,15 @@
 			
 			protected function scroller_creationCompleteHandler(event:FlexEvent):void
 			{
-				scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
-				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
 				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+				
+				scroller.horizontalScrollBar.height = 12;
+				
+				scroller.horizontalScrollBar.thumb.height = 12;
+				scroller.verticalScrollBar.thumb.width = 12;
+				
+				scroller.horizontalScrollBar.track.height = 12;
+				scroller.verticalScrollBar.track.width = 12;
 			}
 			
 			private function mouseWheelHandler( event : MouseEvent ) : void
