git-svn-id: http://svn.vdombox.ru/flextools/trunk@8041 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/InitialWindow.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/InitialWindow.mxml
@@ -13,6 +13,7 @@
 		<![CDATA[
 			import flash.display.NativeWindowSystemChrome;
 			import flash.events.MouseEvent;
+			import flash.text.engine.TextLine;
 			
 			import mx.controls.SWFLoader;
 			import mx.modules.ModuleLoader;
@@ -27,8 +28,11 @@
 			{
 				var target : Object = event.target;
 
-				if ( target is RichEditableText || target is Button )
+				if ( target is RichEditableText || target is Button || target is TextLine )
+				{
+					event.stopImmediatePropagation();
 					return;
+				}
 
 				nativeWindow.startMove();
 				event.stopImmediatePropagation();
