--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ComboBoxLoginSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ComboBoxLoginSkin.mxml
@@ -160,6 +160,11 @@ is defined by the ComboBoxTextInputSkin class.
 				hostComponent.setEditable();
 			}
 			
+			protected function scroller_mouseWheelHandler(event:MouseEvent):void
+			{
+				event.stopImmediatePropagation();
+			}
+			
 		]]>
     </fx:Script>
     
@@ -213,7 +218,8 @@ is defined by the ComboBoxTextInputSkin class.
             </s:Rect>
             
             <!--- @private -->
-            <s:Scroller id="scroller" left="0" top="0" right="0" bottom="0" hasFocusableChildren="false" minViewportInset="1" >
+            <s:Scroller id="scroller" left="0" top="0" right="0" bottom="0" hasFocusableChildren="false" minViewportInset="1"
+						mouseWheel="scroller_mouseWheelHandler(event)">
                 <!--- @copy spark.components.SkinnableDataContainer#dataGroup-->
                 <s:DataGroup id="dataGroup" itemRenderer="spark.skins.spark.DefaultItemRenderer">
                     <s:layout>
