--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -84,6 +84,7 @@
 	<mx:Text id="txt"/>
 	<s:DropDownList id="valueField" width="100%" height="100%"
 				itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.ComboBoxObjectItemRenderer"
+				skinClass="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.DropDownListSkin"
 				change="changeHandler()" open="{valueField.scroller.setStyle( 'horizontalScrollPolicy', 'off' ) }" />
 	
 	
