refactoring: project properties dialog, build air
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8043 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -152,10 +152,7 @@
 
 		private function get currentTemplate() : Template
 		{
-			if ( !ContextManager.templates || ContextManager.templates.length == 0 )
-				return null;
-			
-			return ContextManager.templates.getItemAt( 0 ) as Template;
+			return ContextManager.currentTemplate;
 		}
 			
 		private function onKeyAccept( event:Event ):void
